feat: upgrade championship resources